# BayeuxSerialization

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  bxdata-example.cc
sndata/: CMakeLists.txt  hit.cc  hit.h
sndata/boost_io/: boost_io.cc  hit.ipp
sndata/test/: CMakeLists.txt  hit_t.cc
sndata/test/catch/: catch-main.cpp
